# terminal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/init/: CMakeLists.txt
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt
toolchain/: toolchain-i686.sh  toolchain.cmake
tools/: create-grub-iso.sh  run-qemu-x86-default-vars.sh  run-qemu.sh  sysroot-create-baseimg.sh  sysroot-ensure-mounted.sh  sysroot-is-mounted.sh  sysroot-mount.sh  sysroot-unmount.sh
